fix: stylize scrollbars on desktop

--- a/src/app/message/pages/chat-page/chat-page.component.scss
+++ b/src/app/message/pages/chat-page/chat-page.component.scss
@@ -120,7 +120,3 @@
 .show-inner-scrollbar {
   --overflow: scroll;
 }
-
-.show-scrollbar {
-  overflow-y: scroll;
-}
